      to ecrt_slave_config_reg_pdo_entry().
    - Removed ecrt_domain_register_pdo_range(), because it's functionality can
      be reached by specifying an explicit Pdo mapping and registering those
      Pdo entries.
    - Added an Sdo access interface, working with Sdo requests. These can be
      scheduled for reading and writing during realtime operation.
* Pdo configuration is now supported.
* Current Pdo mapping/configuration is now read via CoE during bus scan, using
  direct Sdo access, independent of the dictionary.
* Added 8139too driver for kernel 2.6.22, thanks to Erwin Burgstaller.
* Added 8139too driver for kernel 2.6.23, thanks to Richard Hacker.
* Added e1000 driver for kernel 2.6.22.
* Added support for slaves that do not support the LRW datagram type. Separate
  domains have to be used for inputs and output.
* Allow gaps in PDO mapping read from CoE.
* Fixed bug in CoE code.
* Improved handling of large EEPROM contents.
* Renamed ec_master module parameters main and backup to main_devices and
  backup_devices to avoid warnings of some compilers.
* List end evaluate CoE detail flags from general category, list
  'Flags' from general category in slave info file.
* Added MODPROBE_FLAGS variable in start script and sysconfig file.
* Implemented missing datagram types.
* Allow multiple sync manager categories in SII.
* Changed all occurrences of 'EEPROM' to 'SII', renamed the eeprom sysfs file
  to sii, in particular.

-------------------------------------------------------------------------------

Changes in version 1.3.2:

* New feature: Read dynamic PDO mapping from SDO dictionary.
* Implemented SII writing workaround for some broken slaves.
* Improved handling for spontaneous AL state changes.
* Master takes mailbox sync manager configurations from EEPROM words
  0x0018-0x001b, if no sync manager configurations are provided.
* Calculate checksum when writing EEPROM or alias address.
* Fixed source MAC address setting bug.